# FL_project

./: .gitignore  README.md  prepare_data.py  pyproject.toml  requirements.txt
fertility_fl/: __init__.py  client_app.py  client_app_dp.py  model.py  server_app.py  task.py
